Quitar campo imagen de actualizar de productos
